test api call script.js

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
    <div class="container">
-
-   </div>
+        <input class="userInput" placeholder="Search" name="userSarch" type="search" aria-label="Search">
+        <button class="searchButton">Click here to search</button>
+    </div>
     <div class="container">
-
+        <div class="infoCard"></div>
     </div>
 
-    
+
 <script src="script.js"></script>
 </body>
 </html>
