api test script.js completed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <div class="container">
-        <input class="userInput" placeholder="Search" name="userSarch" type="search" aria-label="Search">
+        <input id="userInput" placeholder="Search" name="userSarch" type="search" aria-label="Search">
         <button class="searchButton">Click here to search</button>
     </div>
     <div class="container">
