index and css files completed

--- a/index.html
+++ b/index.html
@@ -1,22 +1,83 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <title>Weather App</title>
+
+
+  <!-- This template model has been originally donwloaded from Bootstrap, https://getbootstrap.com/docs/5.0/examples/
+  however large parts of it has been changed, removed, modified and updated to create a weather card and for the template to better suit the purpose
+  of this project. Go to Bootstrap to find out more and to find templates or themes, or create your own -->
+
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/pricing/">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+  <!--Script tag for script file at the bottom of body tag-->
+
+  <!-- Custom styles for this template -->
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
-   <div class="container">
-        <input id="userInput" placeholder="Search" name="userSarch" type="search" aria-label="Search">
-        <button class="searchButton">Click here to search</button>
-    </div>
-    <div class="container">
-        <div class="infoCard"></div>
-    </div>
-
-
-<script src="script.js"></script>
+  <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <symbol id="check" viewBox="0 0 16 16">
+      <title>Check</title>
+      <path
+        d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
+    </symbol>
+  </svg>
+  <div class="container py-3">
+    <header>
+      <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+        <svg xmlns="http://www.w3.org/2000/svg" id ="logo" width="42" height="42" fill="currentColor" class="bi bi-hurricane" viewBox="0 0 16 16">
+          <path d="M6.999 2.6A5.5 5.5 0 0 1 15 7.5a.5.5 0 0 0 1 0 6.5 6.5 0 1 0-13 0 5 5 0 0 0 6.001 4.9A5.5 5.5 0 0 1 1 7.5a.5.5 0 0 0-1 0 6.5 6.5 0 1 0 13 0 5 5 0 0 0-6.001-4.9zM10 7.5a2 2 0 1 1-4 0 2 2 0 0 1 4 0z"/>
+        </svg>  <!--Icon from Bootstrap Icons-->
+        <span class="fs-4"> Weather App </span>
+      </div>
+      <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+        <h1 class="display-4 fw-normal">Weather Warning Service</h1>
+        <p class="fs-5 text-muted">Search for current weather warnings in your area below </p>
+      </div>
+    </header>
+    <main>
+      <br>
+      <!--Section for searchbox and weather for infocard-->
+      <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+        <div class="col mx-auto">
+            <div class="card mb-4 rounded-3 shadow-sm">
+              <div class="card-body container">
+                <div class="infoCard"></div>
+              </div> 
+              <div class="card-body container"> 
+                <input id="userInput" class="form-control mr-sm-2" placeholder="Search" name="userSearch" type="search" aria-label="Search">
+                <br> 
+                <button class="searchButton btn btn-primary">Click here to search</button>
+              </div>    
+            </div>        
+        </div> 
+      </div>       
+    </main>
+    <!--End of section for searchbox and weather for infocard--> 
+    <!--Footer-->
+    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+      <div class="row">
+        <div class="col-6 col-md mx-auto text-center">
+          <p>Disclaimer: Information supplied here may not be accurate, this is only a school project. Please use another service for accurate data.</p>
+          <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">            
+            <a class="me-3 py-2 text-muted text-decoration-none" href="#">OpenWeatherMap</a>
+            <a class="me-3 py-2 text-muted text-decoration-none" href="#">Social Media</a>
+          </nav>
+        </div>      
+      </div>
+    </footer>
+    <!--End of Footer-->
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
