added weather icons to script search results

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="infoCard"></div>
               </div> 
               <div class="card-body container"> 
-                <input id="userInput" class="form-control mr-sm-2" placeholder="Search" name="userSearch" type="search" aria-label="Search">
+                <input id="userInput" class="form-control mr-sm-2" placeholder="Type in city name" name="userSearch" type="search" aria-label="Search">
                 <br> 
                 <button class="searchButton btn btn-primary">Click here to search</button>
               </div>    
