added math.floor to temp

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <span class="fs-4"> Weather App </span>
       </div>
       <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-        <h1 class="display-4 fw-normal">Weather Warning Service</h1>
-        <p class="fs-5 text-muted">Search for current weather warnings in your area below </p>
+        <h1 class="display-4 fw-normal">Weather Search Service</h1>
+        <p class="fs-5 text-muted">Search for current weather </p>
       </div>
     </header>
     <main>
