--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="col-6 col-md mx-auto text-center">
           <p>Disclaimer: Weather information supplied here may not be accurate, this is only a school project. Please use another official service for accurate weather data in your area.</p>
           <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">            
-            <a class="me-3 py-2 text-muted text-decoration-none" href="#">OpenWeatherMap</a>
-            <a class="me-3 py-2 text-muted text-decoration-none" href="#">Social Media</a>
+            <a class="me-3 py-2 text-muted text-decoration-none" href="https://openweathermap.org/">OpenWeatherMap</a>
+            <a class="me-3 py-2 text-muted text-decoration-none" href="https://github.com/">Github</a>
           </nav>
         </div>      
       </div>
