--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 
   <!-- Custom styles for this template -->
   <link href="style.css" rel="stylesheet">
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script type="text/javascript">
+(function() {emailjs.init("user_0pImqIAkgXkl9tgKeWWUK");
+})();
+</script>
 </head>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -64,6 +69,30 @@
       </div>       
     </main>
     <!--End of section for searchbox and weather for infocard--> 
+    <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+      <form method="post">
+          <h3>Questions? Contact Us Below</h3>
+          <br>
+         <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+              <div class="col mx-auto">
+                  <div class="form-group">
+                      <input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
+                  </div>
+                  <div class="form-group">
+                      <input type="text" name="txtEmail" class="form-control" placeholder="Your Email *" value="" />
+                  </div>
+                  <div class="form-group">
+                      <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
+                  </div>
+                  <br>
+                  <div class="form-group">
+                      <input type="submit" name="btnSubmitEmailJS" class="btnContactJS" value="Send Message" />
+                  </div> 
+                  </div>
+          </div>
+      </form>
+</div>
+
     <!--Footer-->
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
       <div class="row">
